# email-api

./: .env-example  README.md  pyproject.toml
.github/workflows/: python-app-code-quality.yml  python-app-test.yml
app/: __init__.py  main.py
app/api/v1/: routers.py
app/api/v1/endpoints/: email.py
app/core/: database.py
app/models/: email.py
job/tasks/: daily_emails.py
