[tool.poetry]
name = "email-api"
version = "0.1.0"
description = "📩 Email API"
authors = ["FernandoCelmer <email@fernandocelmer.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
email-profile = "^0.4.0"
sqlalchemy = "^2.0.29"
pydantic = "^2.7.1"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
